<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JorgeColorado_1Evaluacion</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="transportes_android">TRANSPORTES ANDROID</string>
    <string name="hacer_calculos">HACER CALCULOS</string>
    <string name="introduce_peso">Introduce el peso</string>
    <string name="tarifa_normal">TARIFA NORMAL</string>
    <string name="tarifa_urgente">TARIFA URGENTE</string>
    <string name="caja_reg">Caja regalo</string>
    <string name="tarjeta_dedic">Con tarjeta dedicada</string>

</resources>
